--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
+    "@storybook/addons": "^6.5.16",
     "@storybook/builder-webpack4": "^6.5.16",
     "@storybook/html": "^6.5.16",
     "@storybook/manager-webpack4": "^6.5.16",
     "@storybook/testing-library": "0.0.13",
+    "@storybook/theming": "^6.5.16",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "babel-loader": "^8.3.0",
