--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "unpkg": "dist/macbisdesign/macbisdesign.esm.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ionic-team/stencil-component-starter.git"
+    "url": "git+https://github.com/ionic-team/stencil-component-starter.git"
   },
   "files": [
     "dist/",
@@ -26,7 +26,8 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -o docs-build",
+    "chromatic": "npx chromatic --project-token=d2343c62f72c --exit-zero-on-changes"
   },
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.18.6",
@@ -55,9 +56,16 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.17.3",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
     "puppeteer": "^19.5.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ionic-team/stencil-component-starter/issues"
+  },
+  "readme": "ERROR: No README data found!",
+  "homepage": "https://github.com/ionic-team/stencil-component-starter#readme",
+  "_id": "macbisdesign@0.0.1"
 }
