--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/material": "^5.11.15",
     "@stencil/core": "^3.2.2",
     "@types/react": ">=17.0.0 <18.0.0 || >=18.0.0 <19.0.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": ">=17.0.0",
     "typescript": ">=4.7.4",
