--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.15",
     "@stencil/core": "^3.2.2",
+    "@storybook/theming": "^7.0.24",
     "@types/react": ">=17.0.0 <18.0.0 || >=18.0.0 <19.0.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
@@ -55,7 +56,7 @@
     "@storybook/manager-webpack4": "^6.5.16",
     "@storybook/testing-library": "0.0.13",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
+    "@types/node": "^16.18.37",
     "babel-loader": "^8.3.0",
     "chromatic": "^6.17.4",
     "jest": "^27.5.1",
