--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": ">=17.0.0",
+    "react-scripts": "^5.0.1",
     "typescript": ">=4.7.4",
     "webpack": "^5.82.0"
   },
@@ -59,6 +60,7 @@
     "@types/node": "^16.18.37",
     "babel-loader": "^8.3.0",
     "chromatic": "^6.17.4",
+    "html-webpack-plugin": "^5.5.3",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
     "puppeteer": "^19.5.2"
